# update-notifier

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: hello_world.rs
src/: lib.rs  tests.rs
test/: Cargo.toml  test.toml
