[package]
name = "update-notifier"
version = "0.1.8-alpha.0"
authors = ["Tarik Eshaq"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/tarikeshaq/update-notifier"
repository = "https://github.com/tarikeshaq/update-notifier"
description = "Library to notify you if there are any newer versions, WORK IN PROGRESS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ansi_term = "0.12.1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0.110"
serde_derive = "1.0.110"
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0.53"
configstore = "0.1.1"

[dev-dependencies]
mockito = "0.25.1"
